crates/viewer/dl_dataframe_ui/tests/snapshots/filter_tests__non_nullable_boolean_equals@true.snap
---
source: crates/viewer/dl_dataframe_ui/tests/filter_tests.rs
expression: test_results
---
TestResult {
    filter: NonNullableBoolean(
        IsTrue,
    ),
    field: Field {
        name: "column",
        data_type: Boolean,
    },
    unfiltered: BooleanArray
    [
      true,
      true,
      false,
    ],
    filtered: BooleanArray
    [
      true,
      true,
    ],
}
